--- a/dashboard.html
+++ b/dashboard.html
@@ -497,7 +497,7 @@
 					<div class="section-desc">ডিউটি জেনারেশন থেকে অ্যাপয়েন্টমেন্ট লেটার পর্যন্ত এক জায়গায়।</div>
 				</div>
 				<div class="btns">
-					<a class="button success" href="generate/2_centre_edit.html" title="Generate Duty List">
+					<a class="button success" href="#" title="Generate Duty List">
 						<span class="icon">⚡</span>
 						<span>1. Generate Duty List</span>
 					</a>
