--- a/dashboard.html
+++ b/dashboard.html
@@ -525,6 +525,10 @@
 						<span class="icon">⏳</span>
 						<span>Duty Not assigned List</span>
 					</a>
+					<a class="button secondary" href="generate/5_gender_list.html" title="Duty Not assigned List">
+						<span class="icon">⏳</span>
+						<span>নারী-পুরুষ</span>
+					</a>
 					<a class="button secondary" href="generate/7_assigned_officer_list.html" title="Duty Not assigned List">
 						<span class="icon">⏳</span>
 						<span>Duty List</span>
@@ -532,6 +536,10 @@
 					<a class="button secondary" href="generate/1_apointment_letter_half.html" title="Duty Not assigned List">
 						<span class="icon">⏳</span>
 						<span>খসড়া তালিকা</span>
+					</a>
+					<a class="button secondary" href="generate/5_gender_list.html" title="Duty Not assigned List">
+						<span class="icon">⏳</span>
+						<span>নারী-পুরুষ</span>
 					</a>
 					
 				</div>
